Modernize ysoserial for newer Java